Fixing alignment issue, adding social media icons, fixing header for tablet

--- a/css/_common.less
+++ b/css/_common.less
@@ -708,7 +708,7 @@ a.tab-item.active:hover{
 .refine-search-results:hover{
     background-color:#fff;
 }
-
+ 
 .refine-search-results-arrow{
       border-color: transparent #e3edf4 transparent transparent;
       border-style:solid;
@@ -727,8 +727,8 @@ a.tab-item.active:hover{
 .content-container {
     margin-top: 53px;
     position: relative;
-    @media(max-width: 600px){
-        margin-top: 0;
+    @media (max-width: 767px) {
+        margin-top: 0; 
     }
 }
 
@@ -879,8 +879,8 @@ a.tab-item.active:hover{
   float: left;
 }
 .job-info-location {
-  border-left: 1px solid #616161;
-  padding: 0 5px;
+  border-left: 1px solid #dedede;
+  padding: 0 11px;
 }
 .job-info-location:first-child {
   border: 0;
@@ -1739,13 +1739,19 @@ select.form-selectlist {
 
 .ic-social {
     display: inline-block;
-    padding-left: 5px;
     opacity: 0.3;   
+    img {
+        padding-left: 5px;
+    }
 }
 .ic-social-facebook img { height: 15px; }
 .ic-social-twitter img { height: 17px; }
 .ic-social-google img { height: 22px; }
 .ic-social-linkedin img { height: 16px;}
+.ic-social-youtube img { height: 23px; }
+.ic-social-instagram img { height: 17px; }
+.ic-social-pinterest img { height: 17px; }
+
 .ic-social:hover{ opacity:0.5; }
 
 
@@ -1863,6 +1869,7 @@ a.grey-light-hover {
 .flex-mv10 { margin-top: 10px; margin-bottom: 10px; }
 .flex-mv15 { margin-top: 15px; margin-bottom: 15px; }
 .flex-mv25 { margin-top: 25px; margin-bottom: 25px; }
+.flex-mv90 { margin-top: 90px; margin-bottom: 90px; }
 /* margin-horizontal */
 .flex-mh5 { margin-left: 5px; margin-right: 5px; }
 .flex-mh10 { margin-left: 10px; margin-right: 10px; }
