--- a/css/_jobcentre_theme.less
+++ b/css/_jobcentre_theme.less
@@ -342,7 +342,7 @@ body .select2-container.error .select2-choice {
     letter-spacing: 0.34px;
     padding: 4px 15px;
     text-transform: uppercase;
-    transition: all 0.3s ease;
+    transition: background 0.3s ease;
     position: fixed;
     margin-left: -73px;
     margin-top: 5px;
@@ -715,6 +715,12 @@ a.header-action:link, a.header-action:visited {
     border-bottom: 1px solid #E3E3E3;
     padding-bottom: 5px;
     margin-bottom: 12px;
+}
+.latest-jobs--left {
+    
+}
+.latest-jobs--right {
+
 }
 .price-box {
     background: #fff;
