--- a/css/bctechjobs.css
+++ b/css/bctechjobs.css
@@ -354,7 +354,7 @@ body .select2-container.error .select2-choice {
   letter-spacing: 0.34px;
   padding: 4px 15px;
   text-transform: uppercase;
-  transition: all 0.3s ease;
+  transition: background 0.3s ease;
   position: fixed;
   margin-left: -73px;
   margin-top: 5px;
@@ -2878,7 +2878,7 @@ a.tab-item.active:hover {
   margin-top: 53px;
   position: relative;
 }
-@media (max-width: 600px) {
+@media (max-width: 767px) {
   .content-container {
     margin-top: 0;
   }
@@ -3031,8 +3031,8 @@ a.tab-item.active:hover {
   float: left;
 }
 .job-info-location {
-  border-left: 1px solid #616161;
-  padding: 0 5px;
+  border-left: 1px solid #dedede;
+  padding: 0 11px;
 }
 .job-info-location:first-child {
   border: 0;
@@ -3887,8 +3887,10 @@ select.form-selectlist {
 /* Social media icons */
 .ic-social {
   display: inline-block;
-  padding-left: 5px;
   opacity: 0.3;
+}
+.ic-social img {
+  padding-left: 5px;
 }
 .ic-social-facebook img {
   height: 15px;
@@ -3901,6 +3903,15 @@ select.form-selectlist {
 }
 .ic-social-linkedin img {
   height: 16px;
+}
+.ic-social-youtube img {
+  height: 23px;
+}
+.ic-social-instagram img {
+  height: 17px;
+}
+.ic-social-pinterest img {
+  height: 17px;
 }
 .ic-social:hover {
   opacity: 0.5;
@@ -4160,6 +4171,10 @@ a.grey-light-hover:hover {
 .flex-mv25 {
   margin-top: 25px;
   margin-bottom: 25px;
+}
+.flex-mv90 {
+  margin-top: 90px;
+  margin-bottom: 90px;
 }
 /* margin-horizontal */
 .flex-mh5 {
